--- a/css/main.css
+++ b/css/main.css
@@ -609,8 +609,15 @@ td, th {
   margin-left: 0;
   margin-right: 0; }
 
+.courses-right 
+
+{
+padding-top:0px;
+
+}
+
 .section-gap {
-  padding: 150px 0; }
+  padding: 20px; }
   @media (max-width: 991px) {
     .section-gap {
       padding: 80px 0; } }
@@ -1550,7 +1557,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 997; }
 
 #header.header-scrolled {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(225, 227, 228, 0.9);
   transition: all 0.5s; }
   #header.header-scrolled .nav-menu li:hover > a, #header.header-scrolled .nav-menu > .menu-active > a {
     color: #39cfca; }
@@ -1947,10 +1954,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #f1f9ff; }
   .courses-area .courses-right {
     background: #fff;
-    padding: 40px; }
+    padding: 40px; 
+	padding-top:0px;}
     @media (max-width: 1024px) {
       .courses-area .courses-right {
-        padding: 40px 20px; } }
+        padding: 40px 20px;
+	vertical-align:top; } }
     @media (max-width: 991px) {
       .courses-area .courses-right {
         margin-top: 60px; } }
@@ -1977,7 +1986,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-right: 20px; }
 
 .feature-area {
-  padding: 150px 0 120px; }
+  padding: 20px; }
   @media (max-width: 991px) {
     .feature-area {
       padding: 80px 0px; } }
@@ -2080,10 +2089,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin: auto; }
 
 .contact-page-area .map-wrap {
-  margin-bottom: 120px; }
+  margin-bottom: 0px; }
   @media (max-width: 991px) {
     .contact-page-area .map-wrap {
-      margin-bottom: 50px; } }
+      margin-bottom: 0px; } }
 .contact-page-area .contact-btns {
   font-size: 18px;
   font-weight: 600;
@@ -2765,7 +2774,7 @@ body.mobile-nav-active #mobile-nav-toggle {
       transition: all 0.3s ease 0s;
       color: #777777; }
       .footer-area .single-footer-widget ul li a:hover {
-        color: #fff; }
+        color: #fcfcfc; }
   .footer-area .single-footer-widget .form-wrap {
     margin-top: 25px; }
   .footer-area .single-footer-widget input {
@@ -2821,5 +2830,23 @@ body.mobile-nav-active #mobile-nav-toggle {
         -moz-transition: all 0.3s ease 0s;
         -o-transition: all 0.3s ease 0s;
         transition: all 0.3s ease 0s; }
+
+
+#cus
+{
+margin-bottom:0px;
+padding-bottom:0px;
+}
+
+#specs
+{
+max-width:300px;
+}
+
+#too_b
+
+{
+margin-bottom:60px;
+}
 
 /*# sourceMappingURL=main.css.map */
